deploy: 345b645672a1bf6191ecf7a5df157b943058d048

--- a/publication/dblp-confgrades-leo-b-17/cite.bib
+++ b/publication/dblp-confgrades-leo-b-17/cite.bib
@@ -1,15 +1,11 @@
 @inproceedings{DBLP:conf/grades/LeoB17,
- author = {Dean De Leo and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/grades/LeoB17.bib},
+ author = {Leo, Dean De and Boncz, Peter A.},
  booktitle = {GRADES at SIGMOD},
+ date = {2017},
  doi = {10.1145/3078447.3078457},
  pages = {10:1--10:8},
  publisher = {ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:15 +0100},
  title = {Extending SQL for Computing Shortest Paths},
- url = {https://doi.org/10.1145/3078447.3078457},
- year = {2017}
+ url = {https://doi.org/10.1145/3078447.3078457}
 }
 
