--- a/publication/dblp-conficde-pham-13/cite.bib
+++ b/publication/dblp-conficde-pham-13/cite.bib
@@ -1,18 +1,12 @@
 @inproceedings{DBLP:conf/icde/Pham13,
- author = {Minh-Duc Pham},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/icde/Pham13.bib},
+ author = {Pham, Minh-Duc},
  booktitle = {GDM at ICDE},
+ date = {2013},
  doi = {10.1109/ICDEW.2013.6547471},
- editor = {Chee Yong Chan and
-Jiaheng Lu and
-Kjetil Nørvåg and
-Egemen Tanin},
+ editor = {Chan, Chee Yong and Lu, Jiaheng and Nørvåg, Kjetil and Tanin, Egemen},
  pages = {310--313},
  publisher = {IEEE Computer Society},
- timestamp = {Wed, 16 Oct 2019 14:14:56 +0200},
  title = {Self-organizing structured RDF in MonetDB},
- url = {https://doi.org/10.1109/ICDEW.2013.6547471},
- year = {2013}
+ url = {https://doi.org/10.1109/ICDEW.2013.6547471}
 }
 
