--- a/publication/dblp-confsemweb-phuoc-dpbef-12/cite.bib
+++ b/publication/dblp-confsemweb-phuoc-dpbef-12/cite.bib
@@ -1,21 +1,13 @@
 @inproceedings{DBLP:conf/semweb/PhuocDPBEF12,
- author = {Danh Le Phuoc and
-Minh Dao-Tran and
-Minh-Duc Pham and
-Peter A. Boncz and
-Thomas Eiter and
-Michael Fink},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/semweb/PhuocDPBEF12.bib},
+ author = {Phuoc, Danh Le and Dao-Tran, Minh and Pham, Minh-Duc and Boncz, Peter A. and Eiter, Thomas and Fink, Michael},
  booktitle = {ISWC},
+ date = {2012},
  doi = {10.1007/978-3-642-35173-0_20},
  pages = {300--312},
  publisher = {Springer},
  series = {Lecture Notes in Computer Science},
- timestamp = {Tue, 14 May 2019 10:00:53 +0200},
  title = {Linked Stream Data Processing Engines: Facts and Figures},
  url = {https://doi.org/10.1007/978-3-642-35173-0_20},
- volume = {7650},
- year = {2012}
+ volume = {7650}
 }
 
