--- a/publication/dblp-confsigmod-gubichev-bs-13/cite.bib
+++ b/publication/dblp-confsigmod-gubichev-bs-13/cite.bib
@@ -1,18 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/GubichevBS13,
- author = {Andrey Gubichev and
-Srikanta J. Bedathur and
-Stephan Seufert},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/GubichevBS13.bib},
- booktitle = {First International Workshop on Graph Data Management Experiences
-and Systems, GRADES 2013, co-located with SIGMOD/PODS 2013, New
-York, NY, USA, June 24, 2013},
+ author = {Gubichev, Andrey and Bedathur, Srikanta J. and Seufert, Stephan},
+ booktitle = {First International Workshop on Graph Data Management Experiences and Systems, GRADES 2013, co-located with SIGMOD/PODS 2013, New York, NY, USA, June 24, 2013},
+ date = {2013},
  doi = {10.1145/2484425.2484443},
  pages = {14},
  publisher = {CWI/ACM},
- timestamp = {Tue, 02 Jun 2020 13:40:26 +0200},
  title = {Sparqling Kleene: fast property paths in RDF-3X},
- url = {http://event.cwi.nl/grades2013/14-gubichev.pdf},
- year = {2013}
+ url = {http://event.cwi.nl/grades2013/14-gubichev.pdf}
 }
 
