--- a/publication/dblp-confsigmod-guisado-gamez-p-14/cite.bib
+++ b/publication/dblp-confsigmod-guisado-gamez-p-14/cite.bib
@@ -1,15 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/Guisado-GamezP14,
- author = {Joan Guisado-Gámez and
-Arnau Prat-Pérez},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/Guisado-GamezP14.bib},
+ author = {Guisado-Gámez, Joan and Prat-Pérez, Arnau},
  booktitle = {GRADES at SIGMOD},
+ date = {2015},
  doi = {10.1145/2764947.2764953},
  pages = {6:1--6:6},
  publisher = {ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:14 +0100},
  title = {Understanding Graph Structure of Wikipedia for Query Expansion},
- url = {https://doi.org/10.1145/2764947.2764953},
- year = {2015}
+ url = {https://doi.org/10.1145/2764947.2764953}
 }
 
