--- a/publication/dblp-conftpctc-gubichev-b-14/cite.bib
+++ b/publication/dblp-conftpctc-gubichev-b-14/cite.bib
@@ -1,17 +1,13 @@
 @inproceedings{DBLP:conf/tpctc/GubichevB14,
- author = {Andrey Gubichev and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/tpctc/GubichevB14.bib},
+ author = {Gubichev, Andrey and Boncz, Peter A.},
  booktitle = {TPCTC},
+ date = {2014},
  doi = {10.1007/978-3-319-15350-6_8},
  pages = {113--129},
  publisher = {Springer},
  series = {Lecture Notes in Computer Science},
- timestamp = {Tue, 14 May 2019 10:00:46 +0200},
  title = {Parameter Curation for Benchmark Queries},
  url = {https://doi.org/10.1007/978-3-319-15350-6_8},
- volume = {8904},
- year = {2014}
+ volume = {8904}
 }
 
