--- a/publication/dblp-journalscorrabs-1301-5121/cite.bib
+++ b/publication/dblp-journalscorrabs-1301-5121/cite.bib
@@ -1,15 +1,11 @@
 @article{DBLP:journals/corr/abs-1301-5121,
- archiveprefix = {arXiv},
- author = {Alex Averbuch and
-Martin Neumann},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1301-5121.bib},
+ author = {Averbuch, Alex and Neumann, Martin},
+ date = {2013},
  eprint = {1301.5121},
- journal = {CoRR},
- timestamp = {Mon, 13 Aug 2018 16:46:41 +0200},
+ eprinttype = {arXiv},
+ journaltitle = {CoRR},
  title = {Partitioning Graph Databases - A Quantitative Evaluation},
  url = {http://arxiv.org/abs/1301.5121},
- volume = {abs/1301.5121},
- year = {2013}
+ volume = {abs/1301.5121}
 }
 
