--- a/publication/dblp-journalscorrabs-2001-02299/cite.bib
+++ b/publication/dblp-journalscorrabs-2001-02299/cite.bib
@@ -1,31 +1,11 @@
 @article{DBLP:journals/corr/abs-2001-02299,
- archiveprefix = {arXiv},
- author = {Renzo Angles and
-János Benjamin Antal and
-Alex Averbuch and
-Peter A. Boncz and
-Orri Erling and
-Andrey Gubichev and
-Vlad Haprian and
-Moritz Kaufmann and
-Josep-Lluís Larriba-Pey and
-Norbert Martínez-Bazan and
-József Marton and
-Marcus Paradies and
-Minh-Duc Pham and
-Arnau Prat-Pérez and
-Mirko Spasic and
-Benjamin A. Steer and
-Gábor Szárnyas and
-Jack Waudby},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-2001-02299.bib},
+ author = {Angles, Renzo and Antal, János Benjamin and Averbuch, Alex and Boncz, Peter A. and Erling, Orri and Gubichev, Andrey and Haprian, Vlad and Kaufmann, Moritz and Larriba-Pey, Josep-Lluı́s and Martı́nez-Bazan, Norbert and Marton, József and Paradies, Marcus and Pham, Minh-Duc and Prat-Pérez, Arnau and Spasic, Mirko and Steer, Benjamin A. and Szárnyas, Gábor and Waudby, Jack},
+ date = {2020},
  eprint = {2001.02299},
- journal = {CoRR},
- timestamp = {Mon, 13 Jan 2020 12:40:17 +0100},
+ eprinttype = {arXiv},
+ journaltitle = {CoRR},
  title = {The LDBC Social Network Benchmark},
  url = {http://arxiv.org/abs/2001.02299},
- volume = {abs/2001.02299},
- year = {2020}
+ volume = {abs/2001.02299}
 }
 
