--- a/publication/dblp-journalscorrabs-2010-12243/cite.bib
+++ b/publication/dblp-journalscorrabs-2010-12243/cite.bib
@@ -1,16 +1,11 @@
 @article{DBLP:journals/corr/abs-2010-12243,
- archiveprefix = {arXiv},
- author = {Márton Elekes and
-János Benjamin Antal and
-Gábor Szárnyas},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-2010-12243.bib},
+ author = {Elekes, Márton and Antal, János Benjamin and Szárnyas, Gábor},
+ date = {2020},
  eprint = {2010.12243},
- journal = {CoRR},
- timestamp = {Tue, 27 Oct 2020 11:22:08 +0100},
+ eprinttype = {arXiv},
+ journaltitle = {CoRR},
  title = {An analysis of the SIGMOD 2014 Programming Contest: Complex queries on the LDBC social network graph},
  url = {https://arxiv.org/abs/2010.12243},
- volume = {abs/2010.12243},
- year = {2020}
+ volume = {abs/2010.12243}
 }
 
