--- a/publication/dblp-journalsdbsk-boncz-fgl-013/cite.bib
+++ b/publication/dblp-journalsdbsk-boncz-fgl-013/cite.bib
@@ -1,19 +1,12 @@
 @article{DBLP:journals/dbsk/BonczFGL013,
- author = {Peter A. Boncz and
-Irini Fundulaki and
-Andrey Gubichev and
-Josep Lluís Larriba-Pey and
-Thomas Neumann},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/dbsk/BonczFGL013.bib},
+ author = {Boncz, Peter A. and Fundulaki, Irini and Gubichev, Andrey and Larriba-Pey, Josep Lluı́s and Neumann, Thomas},
+ date = {2013},
  doi = {10.1007/s13222-013-0125-y},
- journal = {Datenbank-Spektrum},
+ journaltitle = {Datenbank-Spektrum},
  number = {2},
  pages = {121--129},
- timestamp = {Thu, 10 Dec 2020 13:35:13 +0100},
  title = {The Linked Data Benchmark Council Project},
  url = {https://doi.org/10.1007/s13222-013-0125-y},
- volume = {13},
- year = {2013}
+ volume = {13}
 }
 
