--- a/publication/dblp-journalsdebu-erling-12/cite.bib
+++ b/publication/dblp-journalsdebu-erling-12/cite.bib
@@ -1,14 +1,11 @@
 @article{DBLP:journals/debu/Erling12,
- author = {Orri Erling},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/debu/Erling12.bib},
- journal = {IEEE Data Eng. Bull.},
+ author = {Erling, Orri},
+ date = {2012},
+ journaltitle = {IEEE Data Eng. Bull.},
  number = {1},
  pages = {3--8},
- timestamp = {Tue, 10 Mar 2020 16:23:50 +0100},
  title = {Virtuoso, a Hybrid RDBMS/Graph Column Store},
  url = {http://sites.computer.org/debull/A12mar/vicol.pdf},
- volume = {35},
- year = {2012}
+ volume = {35}
 }
 
