--- a/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/cite.bib
+++ b/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/cite.bib
@@ -1,24 +1,12 @@
 @article{DBLP:journals/sigmod/AnglesBLF0ENMKT14,
- author = {Renzo Angles and
-Peter A. Boncz and
-Josep Lluís Larriba-Pey and
-Irini Fundulaki and
-Thomas Neumann and
-Orri Erling and
-Peter Neubauer and
-Norbert Martínez-Bazan and
-Venelin Kotsev and
-Ioan Toma},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/sigmod/AnglesBLF0ENMKT14.bib},
+ author = {Angles, Renzo and Boncz, Peter A. and Larriba-Pey, Josep Lluı́s and Fundulaki, Irini and Neumann, Thomas and Erling, Orri and Neubauer, Peter and Martı́nez-Bazan, Norbert and Kotsev, Venelin and Toma, Ioan},
+ date = {2014},
  doi = {10.1145/2627692.2627697},
- journal = {SIGMOD Rec.},
+ journaltitle = {SIGMOD Rec.},
  number = {1},
  pages = {27--31},
- timestamp = {Thu, 10 Dec 2020 13:35:12 +0100},
  title = {The Linked Data Benchmark Council: A graph and RDF industry benchmarking effort},
  url = {https://doi.org/10.1145/2627692.2627697},
- volume = {43},
- year = {2014}
+ volume = {43}
 }
 
