--- a/publication/tpctc-acid/cite.bib
+++ b/publication/tpctc-acid/cite.bib
@@ -1,14 +1,8 @@
 @inproceedings{tpctc_acid,
- author = {Jack Waudby and
-Benjamin A. Steer and
-Karim Karimov and
-József Marton and
-Peter Boncz and
-Gábor Szárnyas},
+ author = {Waudby, Jack and Steer, Benjamin A. and Karimov, Karim and Marton, József and Boncz, Peter and Szárnyas, Gábor},
  booktitle = {TPCTC},
+ date = {2020},
  note = {Accepted.},
- title = {Towards Testing ACID Compliance in the LDBC Social Network Benchmark},
- xxurl = {TODO. Add URL of preprint},
- year = {2020}
+ title = {Towards Testing ACID Compliance in the LDBC Social Network Benchmark}
 }
 
