--- a/publication/dblp-bookscrclinked-14-boncz-ep-14/cite.bib
+++ b/publication/dblp-bookscrclinked-14-boncz-ep-14/cite.bib
@@ -1,15 +1,10 @@
 @incollection{DBLP:books/crc/linked14/BonczEP14,
- author = {Peter A. Boncz and
-Orri Erling and
-Minh-Duc Pham},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/books/crc/linked14/BonczEP14.bib},
+ author = {Boncz, Peter A. and Erling, Orri and Pham, Minh-Duc},
  booktitle = {Linked Data Management},
+ date = {2014},
  pages = {239--259},
  publisher = {Chapman and Hall/CRC},
- timestamp = {Sat, 09 May 2015 17:04:34 +0200},
  title = {Experiences with Virtuoso Cluster RDF Column Store},
- url = {http://www.crcnetbase.com/doi/abs/10.1201/b16859-13},
- year = {2014}
+ url = {http://www.crcnetbase.com/doi/abs/10.1201/b16859-13}
 }
 
