--- a/publication/dblp-confamw-angles-br-13/cite.bib
+++ b/publication/dblp-confamw-angles-br-13/cite.bib
@@ -1,16 +1,11 @@
 @inproceedings{DBLP:conf/amw/AnglesBR13,
- author = {Renzo Angles and
-Pablo Barceló and
-Gonzalo Rios},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/amw/AnglesBR13.bib},
+ author = {Angles, Renzo and Barceló, Pablo and Rios, Gonzalo},
  booktitle = {Alberto Mendelzon International Workshop},
+ date = {2013},
  publisher = {CEUR-WS.org},
  series = {CEUR Workshop Proceedings},
- timestamp = {Wed, 12 Feb 2020 16:44:56 +0100},
  title = {A Practical Query Language for Graph DBs},
  url = {http://ceur-ws.org/Vol-1087/paper8.pdf},
- volume = {1087},
- year = {2013}
+ volume = {1087}
 }
 
