--- a/publication/dblp-confedbt-gubichev-014/cite.bib
+++ b/publication/dblp-confedbt-gubichev-014/cite.bib
@@ -1,15 +1,10 @@
 @inproceedings{DBLP:conf/edbt/Gubichev014,
- author = {Andrey Gubichev and
-Thomas Neumann},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/edbt/Gubichev014.bib},
+ author = {Gubichev, Andrey and Neumann, Thomas},
  booktitle = {EDBT},
+ date = {2014},
  doi = {10.5441/002/edbt.2014.40},
  pages = {439--450},
- timestamp = {Fri, 29 Jan 2021 22:08:41 +0100},
  title = {Exploiting the query structure for efficient join ordering in SPARQL queries},
- url = {https://doi.org/10.5441/002/edbt.2014.40},
- xxpublisher = {OpenProceedings.org},
- year = {2014}
+ url = {https://doi.org/10.5441/002/edbt.2014.40}
 }
 
