--- a/publication/dblp-confedbt-tsialiamanis-sfcb-12/cite.bib
+++ b/publication/dblp-confedbt-tsialiamanis-sfcb-12/cite.bib
@@ -1,18 +1,11 @@
 @inproceedings{DBLP:conf/edbt/TsialiamanisSFCB12,
- author = {Petros Tsialiamanis and
-Lefteris Sidirourgos and
-Irini Fundulaki and
-Vassilis Christophides and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/edbt/TsialiamanisSFCB12.bib},
+ author = {Tsialiamanis, Petros and Sidirourgos, Lefteris and Fundulaki, Irini and Christophides, Vassilis and Boncz, Peter A.},
  booktitle = {EDBT},
+ date = {2012},
  doi = {10.1145/2247596.2247635},
  pages = {324--335},
  publisher = {ACM},
- timestamp = {Tue, 06 Nov 2018 16:59:06 +0100},
  title = {Heuristics-based query optimisation for SPARQL},
- url = {https://doi.org/10.1145/2247596.2247635},
- year = {2012}
+ url = {https://doi.org/10.1145/2247596.2247635}
 }
 
