--- a/publication/dblp-confgrades-ngai-hhi-17/cite.bib
+++ b/publication/dblp-confgrades-ngai-hhi-17/cite.bib
@@ -1,17 +1,10 @@
 @inproceedings{DBLP:conf/grades/NgaiHHI17,
- author = {Wing Lung Ngai and
-Tim Hegeman and
-Stijn Heldens and
-Alexandru Iosup},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/bib/conf/grades/NgaiHHI17},
+ author = {Ngai, Wing Lung and Hegeman, Tim and Heldens, Stijn and Iosup, Alexandru},
  booktitle = {GRADES at SIGMOD},
+ date = {2017},
  doi = {10.1145/3078447.3078455},
- nourl = {https://doi.org/10.1145/3078447.3078455},
  pages = {8:1--8:6},
  publisher = {ACM},
- timestamp = {Tue, 06 Nov 2018 16:58:01 +0100},
- title = {Granula: Toward Fine-grained Performance Analysis of Large-scale Graph Processing Platforms},
- year = {2017}
+ title = {Granula: Toward Fine-grained Performance Analysis of Large-scale Graph Processing Platforms}
 }
 
