--- a/publication/dblp-confgrades-prat-perez-gskdb-17/cite.bib
+++ b/publication/dblp-confgrades-prat-perez-gskdb-17/cite.bib
@@ -1,19 +1,11 @@
 @inproceedings{DBLP:conf/grades/Prat-PerezGSKDB17,
- author = {Arnau Prat-Pérez and
-Joan Guisado-Gámez and
-Xavier Fernández Salas and
-Petr Koupy and
-Siegfried Depner and
-Davide Basilio Bartolini},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/grades/Prat-PerezGSKDB17.bib},
+ author = {Prat-Pérez, Arnau and Guisado-Gámez, Joan and Salas, Xavier Fernández and Koupy, Petr and Depner, Siegfried and Bartolini, Davide Basilio},
  booktitle = {GRADES at SIGMOD},
+ date = {2017},
  doi = {10.1145/3078447.3078453},
  pages = {6:1--6:6},
  publisher = {ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:15 +0100},
  title = {Towards a property graph generator for benchmarking},
- url = {https://doi.org/10.1145/3078447.3078453},
- year = {2017}
+ url = {https://doi.org/10.1145/3078447.3078453}
 }
 
