--- a/publication/dblp-confgrades-szarnyas-pampkeb-18/cite.bib
+++ b/publication/dblp-confgrades-szarnyas-pampkeb-18/cite.bib
@@ -1,23 +1,11 @@
 @inproceedings{DBLP:conf/grades/SzarnyasPAMPKEB18,
- author = {Gábor Szárnyas and
-Arnau Prat-Pérez and
-Alex Averbuch and
-József Marton and
-Marcus Paradies and
-Moritz Kaufmann and
-Orri Erling and
-Peter A. Boncz and
-Vlad Haprian and
-János Benjamin Antal},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/bib/conf/grades/SzarnyasPAMPKEB18},
+ author = {Szárnyas, Gábor and Prat-Pérez, Arnau and Averbuch, Alex and Marton, József and Paradies, Marcus and Kaufmann, Moritz and Erling, Orri and Boncz, Peter A. and Haprian, Vlad and Antal, János Benjamin},
  booktitle = {GRADES-NDA at SIGMOD/PODS},
+ date = {2018},
  doi = {10.1145/3210259.3210268},
  pages = {9:1--9:11},
  publisher = {ACM},
- timestamp = {Thu, 07 Jun 2018 08:09:17 +0200},
  title = {An early look at the LDBC Social Network Benchmark's Business Intelligence workload},
- url = {http://doi.acm.org/10.1145/3210259.3210268},
- year = {2018}
+ url = {http://doi.acm.org/10.1145/3210259.3210268}
 }
 
