--- a/publication/dblp-confrweb-larriba-pey-md-14/cite.bib
+++ b/publication/dblp-confrweb-larriba-pey-md-14/cite.bib
@@ -1,19 +1,13 @@
 @inproceedings{DBLP:conf/rweb/Larriba-PeyMD14,
- author = {Josep Lluís Larriba-Pey and
-Norbert Martínez-Bazan and
-David Domínguez-Sal},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/rweb/Larriba-PeyMD14.bib},
- booktitle = {Reasoning Web. Reasoning on the Web in the Big Data Era - 10th International
-Summer School 2014, Athens, Greece, September 8-13, 2014. Proceedings},
+ author = {Larriba-Pey, Josep Lluı́s and Martı́nez-Bazan, Norbert and Domı́nguez-Sal, David},
+ booktitle = {Reasoning Web. Reasoning on the Web in the Big Data Era - 10th International Summer School 2014, Athens, Greece, September 8-13, 2014. Proceedings},
+ date = {2014},
  doi = {10.1007/978-3-319-10587-1_4},
  pages = {171--194},
  publisher = {Springer},
  series = {Lecture Notes in Computer Science},
- timestamp = {Thu, 10 Dec 2020 13:35:15 +0100},
  title = {Introduction to Graph Databases},
  url = {https://doi.org/10.1007/978-3-319-10587-1_4},
- volume = {8714},
- year = {2014}
+ volume = {8714}
 }
 
