--- a/publication/dblp-confsigmod-angles-abbfglpps-18/cite.bib
+++ b/publication/dblp-confsigmod-angles-abbfglpps-18/cite.bib
@@ -1,25 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/AnglesABBFGLPPS18,
- author = {Renzo Angles and
-Marcelo Arenas and
-Pablo Barceló and
-Peter A. Boncz and
-George H. L. Fletcher and
-Claudio Gutierrez and
-Tobias Lindaaker and
-Marcus Paradies and
-Stefan Plantikow and
-Juan F. Sequeda and
-Oskar van Rest and
-Hannes Voigt},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/bib/conf/sigmod/AnglesABBFGLPPS18},
+ author = {Angles, Renzo and Arenas, Marcelo and Barceló, Pablo and Boncz, Peter A. and Fletcher, George H. L. and Gutierrez, Claudio and Lindaaker, Tobias and Paradies, Marcus and Plantikow, Stefan and Sequeda, Juan F. and van Rest, Oskar and Voigt, Hannes},
  booktitle = {SIGMOD},
+ date = {2018},
  doi = {10.1145/3183713.3190654},
  pages = {1421--1432},
  publisher = {ACM},
- timestamp = {Sun, 27 May 2018 19:31:52 +0200},
  title = {G-CORE: A Core for Future Graph Query Languages},
- url = {http://doi.acm.org/10.1145/3183713.3190654},
- year = {2018}
+ url = {http://doi.acm.org/10.1145/3183713.3190654}
 }
 
