--- a/publication/dblp-confsigmod-angles-pdl-13/cite.bib
+++ b/publication/dblp-confsigmod-angles-pdl-13/cite.bib
@@ -1,17 +1,10 @@
 @inproceedings{DBLP:conf/sigmod/AnglesPDL13,
- author = {Renzo Angles and
-Arnau Prat-Pérez and
-David Dominguez-Sal and
-Josep Lluís Larriba-Pey},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/AnglesPDL13.bib},
+ author = {Angles, Renzo and Prat-Pérez, Arnau and Dominguez-Sal, David and Larriba-Pey, Josep Lluı́s},
  booktitle = {GRADES at SIGMOD},
+ date = {2013},
  doi = {10.1145/2484425.2484440},
  publisher = {CWI/ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:14 +0100},
  title = {Benchmarking database systems for social network applications},
- url = {http://event.cwi.nl/grades2013/15-Angles.pdf},
- xxpages = {15},
- year = {2013}
+ url = {http://event.cwi.nl/grades2013/15-Angles.pdf}
 }
 
