--- a/publication/dblp-confsigmod-cattuto-qpa-13/cite.bib
+++ b/publication/dblp-confsigmod-cattuto-qpa-13/cite.bib
@@ -1,16 +1,10 @@
 @inproceedings{DBLP:conf/sigmod/CattutoQPA13,
- author = {Ciro Cattuto and
-Marco Quaggiotto and
-André Panisson and
-Alex Averbuch},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/CattutoQPA13.bib},
+ author = {Cattuto, Ciro and Quaggiotto, Marco and Panisson, André and Averbuch, Alex},
  booktitle = {GRADES at SIGMOD},
+ date = {2013},
  doi = {10.1145/2484425.2484442},
  publisher = {CWI/ACM},
- timestamp = {Tue, 02 Jun 2020 13:40:26 +0200},
  title = {Time-varying social networks in a graph database: a Neo4j use case},
- url = {http://event.cwi.nl/grades2013/11-averbuch.pdf},
- year = {2013}
+ url = {http://event.cwi.nl/grades2013/11-averbuch.pdf}
 }
 
