--- a/publication/dblp-confsigmod-erling-alcgppb-15/cite.bib
+++ b/publication/dblp-confsigmod-erling-alcgppb-15/cite.bib
@@ -1,20 +1,10 @@
 @inproceedings{DBLP:conf/sigmod/ErlingALCGPPB15,
- author = {Orri Erling and
-Alex Averbuch and
-Josep-Lluis Larriba-Pey and
-Hassan Chafi and
-Andrey Gubichev and
-Arnau Prat-Pérez and
-Minh-Duc Pham and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, http://dblp.org},
- biburl = {http://dblp.uni-trier.de/rec/bib/conf/sigmod/ErlingALCGPPB15},
+ author = {Erling, Orri and Averbuch, Alex and Larriba-Pey, Josep-Lluis and Chafi, Hassan and Gubichev, Andrey and Prat-Pérez, Arnau and Pham, Minh-Duc and Boncz, Peter A.},
  booktitle = {SIGMOD},
+ date = {2015},
  doi = {10.1145/2723372.2742786},
  pages = {619--630},
- timestamp = {Thu, 12 Nov 2015 16:33:38 +0100},
  title = {The LDBC Social Network Benchmark: Interactive Workload},
- url = {http://doi.acm.org/10.1145/2723372.2742786},
- year = {2015}
+ url = {http://doi.acm.org/10.1145/2723372.2742786}
 }
 
