--- a/publication/dblp-confsigmod-gubichev-t-14/cite.bib
+++ b/publication/dblp-confsigmod-gubichev-t-14/cite.bib
@@ -1,15 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/GubichevT14,
- author = {Andrey Gubichev and
-Manuel Then},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/GubichevT14.bib},
+ author = {Gubichev, Andrey and Then, Manuel},
  booktitle = {GRADES at SIGMOD},
+ date = {2014},
  doi = {10.1145/2621934.2621944},
  pages = {8:1--8:7},
  publisher = {CWI/ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:14 +0100},
  title = {Graph Pattern Matching - Do We Have to Reinvent the Wheel?},
- url = {https://doi.org/10.1145/2621934.2621944},
- year = {2014}
+ url = {https://doi.org/10.1145/2621934.2621944}
 }
 
