--- a/publication/dblp-confsigmod-ma-wqyxz-13/cite.bib
+++ b/publication/dblp-confsigmod-ma-wqyxz-13/cite.bib
@@ -1,19 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/MaWQYXZ13,
- author = {Haixin Ma and
-Jinxian Wei and
-Weining Qian and
-Chengcheng Yu and
-Fan Xia and
-Aoying Zhou},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/MaWQYXZ13.bib},
+ author = {Ma, Haixin and Wei, Jinxian and Qian, Weining and Yu, Chengcheng and Xia, Fan and Zhou, Aoying},
  booktitle = {GRADES at SIGMOD},
+ date = {2013},
  doi = {10.1145/2484425.2484435},
  pages = {10},
  publisher = {CWI/ACM},
- timestamp = {Tue, 02 Jun 2020 13:40:26 +0200},
  title = {On benchmarking online social media analytical queries},
- url = {http://event.cwi.nl/grades2013/10-Ma.pdf},
- year = {2013}
+ url = {http://event.cwi.nl/grades2013/10-Ma.pdf}
 }
 
