--- a/publication/dblp-confsigmod-martinez-bazan-d-14/cite.bib
+++ b/publication/dblp-confsigmod-martinez-bazan-d-14/cite.bib
@@ -1,15 +1,11 @@
 @inproceedings{DBLP:conf/sigmod/Martinez-BazanD14,
- author = {Norbert Martínez-Bazan and
-David Domínguez-Sal},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/Martinez-BazanD14.bib},
+ author = {Martı́nez-Bazan, Norbert and Domı́nguez-Sal, David},
  booktitle = {GRADES at SIGMOD},
+ date = {2014},
  doi = {10.1145/2621934.2621943},
  pages = {6:1--6:6},
  publisher = {CWI/ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:14 +0100},
  title = {Using semijoin programs to solve traversal queries in graph databases},
- url = {https://doi.org/10.1145/2621934.2621943},
- year = {2014}
+ url = {https://doi.org/10.1145/2621934.2621943}
 }
 
