--- a/publication/dblp-confsigmod-prat-d-14/cite.bib
+++ b/publication/dblp-confsigmod-prat-d-14/cite.bib
@@ -1,17 +1,12 @@
 @inproceedings{DBLP:conf/sigmod/PratD14,
- author = {Arnau Prat-Pérez and
-David Domínguez-Sal},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/sigmod/PratD14.bib},
+ author = {Prat-Pérez, Arnau and Domı́nguez-Sal, David},
  booktitle = {GRADES at SIGMOD},
+ date = {2014},
  doi = {10.1145/2621934.2621942},
- editor = {Peter A. Boncz and
-Josep Lluís Larriba-Pey},
+ editor = {Boncz, Peter A. and Larriba-Pey, Josep Lluı́s},
  pages = {7:1--7:9},
  publisher = {CWI/ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:14 +0100},
  title = {How community-like is the structure of synthetically generated graphs?},
- url = {https://doi.org/10.1145/2621934.2621942},
- year = {2014}
+ url = {https://doi.org/10.1145/2621934.2621942}
 }
 
