--- a/publication/dblp-conftpctc-boncz-ne-13/cite.bib
+++ b/publication/dblp-conftpctc-boncz-ne-13/cite.bib
@@ -1,17 +1,11 @@
 @inproceedings{DBLP:conf/tpctc/BonczNE13,
- author = {Peter A. Boncz and
-Thomas Neumann and
-Orri Erling},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/tpctc/BonczNE13.bib},
+ author = {Boncz, Peter A. and Neumann, Thomas and Erling, Orri},
+ date = {2013},
  doi = {10.1007/978-3-319-04936-6_5},
  pages = {61--76},
  publisher = {Springer},
- timestamp = {Tue, 14 May 2019 10:00:46 +0200},
  title = {TPC-H Analyzed: Hidden Messages and Lessons Learned from an Influential Benchmark},
  url = {https://doi.org/10.1007/978-3-319-04936-6_5},
- volume = {8391},
- xxseries = {Lecture Notes in Computer Science},
- year = {2013}
+ volume = {8391}
 }
 
