--- a/publication/dblp-conftpctc-pham-be-12/cite.bib
+++ b/publication/dblp-conftpctc-pham-be-12/cite.bib
@@ -1,15 +1,10 @@
 @inproceedings{DBLP:conf/tpctc/PhamBE12,
- author = {Minh-Duc Pham and
-Peter A. Boncz and
-Orri Erling},
- bibsource = {dblp computer science bibliography, http://dblp.org},
- biburl = {http://dblp.uni-trier.de/rec/bib/conf/tpctc/PhamBE12},
+ author = {Pham, Minh-Duc and Boncz, Peter A. and Erling, Orri},
  booktitle = {TPCTC},
+ date = {2012},
  doi = {10.1007/978-3-642-36727-4_11},
  pages = {156--172},
- timestamp = {Tue, 23 May 2017 01:12:14 +0200},
  title = {S3G2: A Scalable Structure-Correlated Social Graph Generator},
- url = {https://doi.org/10.1007/978-3-642-36727-4_11},
- year = {2012}
+ url = {https://doi.org/10.1007/978-3-642-36727-4_11}
 }
 
