--- a/publication/dblp-confwww-pham-peb-15/cite.bib
+++ b/publication/dblp-confwww-pham-peb-15/cite.bib
@@ -1,17 +1,11 @@
 @inproceedings{DBLP:conf/www/PhamPEB15,
- author = {Minh-Duc Pham and
-Linnea Passing and
-Orri Erling and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/www/PhamPEB15.bib},
+ author = {Pham, Minh-Duc and Passing, Linnea and Erling, Orri and Boncz, Peter A.},
  booktitle = {WWW},
+ date = {2015},
  doi = {10.1145/2736277.2741121},
  pages = {864--874},
  publisher = {ACM},
- timestamp = {Tue, 06 Nov 2018 16:57:07 +0100},
  title = {Deriving an Emergent Relational Schema from RDF Data},
- url = {https://doi.org/10.1145/2736277.2741121},
- year = {2015}
+ url = {https://doi.org/10.1145/2736277.2741121}
 }
 
