--- a/publication/dblp-confwww-prat-perez-dl-14/cite.bib
+++ b/publication/dblp-confwww-prat-perez-dl-14/cite.bib
@@ -1,16 +1,11 @@
 @inproceedings{DBLP:conf/www/Prat-PerezDL14,
- author = {Arnau Prat-Pérez and
-David Dominguez-Sal and
-Josep Lluís Larriba-Pey},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/www/Prat-PerezDL14.bib},
+ author = {Prat-Pérez, Arnau and Dominguez-Sal, David and Larriba-Pey, Josep Lluı́s},
  booktitle = {WWW},
+ date = {2014},
  doi = {10.1145/2566486.2568010},
  pages = {225--236},
  publisher = {ACM},
- timestamp = {Thu, 10 Dec 2020 13:35:13 +0100},
  title = {High quality, scalable and parallel community detection for large real graphs},
- url = {https://doi.org/10.1145/2566486.2568010},
- year = {2014}
+ url = {https://doi.org/10.1145/2566486.2568010}
 }
 
