--- a/publication/dblp-journalsercim-angles-pb-14/cite.bib
+++ b/publication/dblp-journalsercim-angles-pb-14/cite.bib
@@ -1,15 +1,10 @@
 @article{DBLP:journals/ercim/AnglesPB14,
- author = {Renzo Angles and
-Minh-Duc Pham and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/ercim/AnglesPB14.bib},
- journal = {ERCIM News},
+ author = {Angles, Renzo and Pham, Minh-Duc and Boncz, Peter A.},
+ date = {2014},
+ journaltitle = {ERCIM News},
  number = {96},
- timestamp = {Wed, 22 May 2019 16:42:59 +0200},
  title = {Benchmarking Linked Open Data Management Systems},
  url = {http://ercim-news.ercim.eu/en96/special/benchmarking-linked-open-data-management-systems},
- volume = {2014},
- year = {2014}
+ volume = {2014}
 }
 
