--- a/publication/dblp-journalsercim-pham-b-14/cite.bib
+++ b/publication/dblp-journalsercim-pham-b-14/cite.bib
@@ -1,14 +1,10 @@
 @article{DBLP:journals/ercim/PhamB14,
- author = {Minh-Duc Pham and
-Peter A. Boncz},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/ercim/PhamB14.bib},
- journal = {ERCIM News},
+ author = {Pham, Minh-Duc and Boncz, Peter A.},
+ date = {2014},
+ journaltitle = {ERCIM News},
  number = {96},
- timestamp = {Wed, 22 May 2019 16:42:57 +0200},
  title = {MonetDB/RDF: Discovering and Exploiting the Emergent Schema of RDF Data},
  url = {http://ercim-news.ercim.eu/en96/special/monetdb-rdf-discovering-and-exploiting-the-emergent-schema-of-rdf-data},
- volume = {2014},
- year = {2014}
+ volume = {2014}
 }
 
