--- a/publication/dblp-journalsws-loizou-ag-15/cite.bib
+++ b/publication/dblp-journalsws-loizou-ag-15/cite.bib
@@ -1,16 +1,11 @@
 @article{DBLP:journals/ws/LoizouAG15,
- author = {Antonis Loizou and
-Renzo Angles and
-Paul Groth},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/ws/LoizouAG15.bib},
+ author = {Loizou, Antonis and Angles, Renzo and Groth, Paul},
+ date = {2015},
  doi = {10.1016/j.websem.2014.11.003},
- journal = {J. Web Semant.},
+ journaltitle = {J. Web Semant.},
  pages = {1--26},
- timestamp = {Tue, 04 Aug 2020 18:48:38 +0200},
  title = {On the formulation of performant SPARQL queries},
  url = {https://doi.org/10.1016/j.websem.2014.11.003},
- volume = {31},
- year = {2015}
+ volume = {31}
 }
 
