--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -1,6 +1,6 @@
 @article{DBLP:journals/corr/abs-1301-5121,
   author       = {Averbuch, Alex and Neumann, Martin},
-  url          = {http://arxiv.org/abs/1301.5121},
+  url          = {http://arxiv.org/pdf/1301.5121.pdf},
   date         = {2013},
   eprint       = {1301.5121},
   eprinttype   = {arXiv},
@@ -11,7 +11,7 @@
 
 @article{DBLP:journals/corr/abs-2001-02299,
   author       = {Angles, Renzo and Antal, J{á}nos Benjamin and Averbuch, Alex and Boncz, Peter A. and Erling, Orri and Gubichev, Andrey and Haprian, Vlad and Kaufmann, Moritz and Larriba-Pey, Josep-Llu{ı́}s and Mart{ı́}nez-Bazan, Norbert and Marton, J{ó}zsef and Paradies, Marcus and Pham, Minh-Duc and Prat-P{é}rez, Arnau and Spasic, Mirko and Steer, Benjamin A. and Sz{á}rnyas, G{á}bor and Waudby, Jack},
-  url          = {http://arxiv.org/abs/2001.02299},
+  url          = {http://arxiv.org/pdf/2001.02299.pdf},
   date         = {2020},
   eprint       = {2001.02299},
   eprinttype   = {arXiv},
@@ -22,7 +22,7 @@
 
 @article{DBLP:journals/corr/abs-2010-12243,
   author       = {Elekes, M{á}rton and Antal, J{á}nos Benjamin and Sz{á}rnyas, G{á}bor},
-  url          = {https://arxiv.org/abs/2010.12243},
+  url          = {https://arxiv.org/pdf/2010.12243.pdf},
   date         = {2020},
   eprint       = {2010.12243},
   eprinttype   = {arXiv},
@@ -33,7 +33,7 @@
 
 @article{DBLP:journals/corr/abs-2011-15028,
   author       = {Iosup, Alexandru and Musaafir, Ahmed and Uta, Alexandru and Prat-P{é}rez, Arnau and Sz{á}rnyas, G{á}bor and Chafi, Hassan and Tanase, Ilie Gabriel and Nai, Lifeng and Anderson, Michael J. and Capota, Mihai and Sundaram, Narayanan and Boncz, Peter A. and Depner, Siegfried and Heldens, Stijn and Manhardt, Thomas and Hegeman, Tim and Ngai, Wing Lung and Xia, Yinglong},
-  url          = {https://arxiv.org/abs/2011.15028},
+  url          = {https://arxiv.org/pdf/2011.15028.pdf},
   date         = {2020},
   eprint       = {2011.15028},
   eprinttype   = {arXiv},
