deploy: 4321ad27c5fc06febd8fc83bdebf1d363a9733d0

--- a/publication/dblp-journalscorrabs-1301-5121/cite.bib
+++ b/publication/dblp-journalscorrabs-1301-5121/cite.bib
@@ -5,7 +5,7 @@
  eprinttype = {arXiv},
  journaltitle = {CoRR},
  title = {Partitioning Graph Databases - A Quantitative Evaluation},
- url = {http://arxiv.org/abs/1301.5121},
+ url = {http://arxiv.org/pdf/1301.5121.pdf},
  volume = {abs/1301.5121}
 }
 
