--- a/publication/dblp-journalscorrabs-2001-02299/cite.bib
+++ b/publication/dblp-journalscorrabs-2001-02299/cite.bib
@@ -5,7 +5,7 @@
  eprinttype = {arXiv},
  journaltitle = {CoRR},
  title = {The LDBC Social Network Benchmark},
- url = {http://arxiv.org/abs/2001.02299},
+ url = {http://arxiv.org/pdf/2001.02299.pdf},
  volume = {abs/2001.02299}
 }
 
