--- a/publication/dblp-journalscorrabs-2011-15028/cite.bib
+++ b/publication/dblp-journalscorrabs-2011-15028/cite.bib
@@ -5,7 +5,7 @@
  eprinttype = {arXiv},
  journaltitle = {CoRR},
  title = {The LDBC Graphalytics Benchmark},
- url = {https://arxiv.org/abs/2011.15028},
+ url = {https://arxiv.org/pdf/2011.15028.pdf},
  volume = {abs/2011.15028}
 }
 
