--- a/publication/dblp-journalscorrabs-2010-12243/cite.bib
+++ b/publication/dblp-journalscorrabs-2010-12243/cite.bib
@@ -5,7 +5,7 @@
  eprinttype = {arXiv},
  journaltitle = {CoRR},
  title = {An analysis of the SIGMOD 2014 Programming Contest: Complex queries on the LDBC social network graph},
- url = {https://arxiv.org/abs/2010.12243},
+ url = {https://arxiv.org/pdf/2010.12243.pdf},
  volume = {abs/2010.12243}
 }
 
