Update TPCTC entry

--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -451,11 +451,24 @@
   title     = {High quality, scalable and parallel community detection for large real graphs},
 }
 
-@inproceedings{tpctc_acid,
-  author    = {Waudby, Jack and Steer, Benjamin A. and Karimov, Karim and Marton, J{ó}zsef and Boncz, Peter and Sz{á}rnyas, G{á}bor},
-  booktitle = {{TPCTC}},
-  date      = {2020},
-  note      = {Accepted.},
+@inproceedings{DBLP:conf/tpctc/WaudbySKMBS20,
+  author    = {Jack Waudby and
+               Benjamin A. Steer and
+               Karim Karimov and
+               J{\'{o}}zsef Marton and
+               Peter A. Boncz and
+               G{\'{a}}bor Sz{\'{a}}rnyas},
   title     = {Towards Testing {ACID} Compliance in the {LDBC} {S}ocial {N}etwork {B}enchmark},
+  booktitle = {{TPCTC}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12752},
+  pages     = {1--17},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-84924-5_1},
+  doi       = {10.1007/978-3-030-84924-5_1},
+  timestamp = {Fri, 06 Aug 2021 15:44:31 +0200},
+  biburl    = {https://dblp.org/rec/conf/tpctc/WaudbySKMBS20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
