Unindent a few lines for consistent formatting

--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -459,7 +459,7 @@
                Peter A. Boncz and
                G{\'{a}}bor Sz{\'{a}}rnyas},
   title     = {Towards Testing {ACID} Compliance in the {LDBC} {S}ocial {N}etwork {B}enchmark},
-  booktitle = {{TPCTC}},
+  booktitle = {TPCTC},
   series    = {Lecture Notes in Computer Science},
   volume    = {12752},
   pages     = {1--17},
