--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -472,3 +472,15 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@techreport{LDBC:TR:TR-2021-01,
+  author      = "Green, Alastair and Guagliardo, Paolo and Libkin, Leonid",
+  title       = "Property graphs and paths in {GQL}: {M}athematical definitions",
+  institution = "Linked Data Benchmark Council (LDBC)",
+  year        = "2021",
+  month       = "Oct",
+  type        = "Technical Reports",
+  number      = "TR-2021-01",
+  url         = "https://ldbcouncil.org/docs/papers/w16045-prepub-LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.pdf",
+  abstract    = "This paper provides precise mathematical definitions of a property graph as specified in the proposed GQL international standard, which is an attributed mixed multigraph with loops. It further defines a partially-oriented walk in such a property graph, which is called a path in GQL, as well as restricted classes of such walks (trails, simple/acyclic paths).",
+  annote      = ""
+}
