--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -480,7 +480,7 @@
   month       = "Oct",
   type        = "Technical Reports",
   number      = "TR-2021-01",
-  url         = "https://ldbcouncil.org/docs/papers/w16045-prepub-LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.pdf",
+  url         = "LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf",
   abstract    = "This paper provides precise mathematical definitions of a property graph as specified in the proposed GQL international standard, which is an attributed mixed multigraph with loops. It further defines a partially-oriented walk in such a property graph, which is called a path in GQL, as well as restricted classes of such walks (trails, simple/acyclic paths).",
   annote      = ""
 }
