--- a/publication/ldbc-tr-tr-2021-01/cite.bib
+++ b/publication/ldbc-tr-tr-2021-01/cite.bib
@@ -7,7 +7,7 @@
  number = {TR-2021-01},
  title = {Property graphs and paths in GQL: Mathematical definitions},
  type = {Technical Reports},
- url = {https://ldbcouncil.org/docs/papers/w16045-prepub-LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.pdf},
+ url = {LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf},
  year = {2021}
 }
 
