--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -481,6 +481,8 @@
   type        = "Technical Reports",
   number      = "TR-2021-01",
   url         = "https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf",
+  ia_url      = "https://web.archive.org/web/20211105164539/https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf",
   abstract    = "This paper provides precise mathematical definitions of a property graph as specified in the proposed GQL international standard, which is an attributed mixed multigraph with loops. It further defines a partially-oriented walk in such a property graph, which is called a path in GQL, as well as restricted classes of such walks (trails, simple/acyclic paths).",
-  annote      = ""
+  annote      = "",
+  doi         = {10.54285/ldbc.TZJP7279},
 }
