deploy: 3ace6ab62defc6efea9c94f0e68cc563ee1c7f7b

--- a/publication/ldbc-tr-tr-2021-01/cite.bib
+++ b/publication/ldbc-tr-tr-2021-01/cite.bib
@@ -3,10 +3,10 @@
  annote = {},
  author = {Green, Alastair and Guagliardo, Paolo and Libkin, Leonid},
  doi = {10.54285/ldbc.TZJP7279},
- ia_url = {https://web.archive.org/web/20211105164539/https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf},
  institution = {Linked Data Benchmark Council (LDBC)},
  month = {Oct},
  number = {TR-2021-01},
+ subtitle = {https://web.archive.org/web/20211105164539/https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf},
  title = {Property graphs and paths in GQL: Mathematical definitions},
  type = {Technical Reports},
  url = {https://ldbcouncil.org/docs/papers/LDBC-Technical-Report-TR-2021-01--Property-graphs-and-paths-in-GQL-Mathematical-definitions.DOI.10.54285_ldbc.TZJP7279.pdf},
