--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -465,7 +465,7 @@
   pages     = {1--17},
   publisher = {Springer},
   year      = {2020},
-  url       = {https://doi.org/10.1007/978-3-030-84924-5_1},
+  url       = {https://ldbcouncil.org/docs/papers/ldbc-acid-tpctc2020.pdf},
   doi       = {10.1007/978-3-030-84924-5_1},
   timestamp = {Fri, 06 Aug 2021 15:44:31 +0200},
   biburl    = {https://dblp.org/rec/conf/tpctc/WaudbySKMBS20.bib},
