--- a/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib
+++ b/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib
@@ -14,7 +14,7 @@ Gábor Szárnyas},
  series = {Lecture Notes in Computer Science},
  timestamp = {Fri, 06 Aug 2021 15:44:31 +0200},
  title = {Towards Testing ACID Compliance in the LDBC Social Network Benchmark},
- url = {https://doi.org/10.1007/978-3-030-84924-5_1},
+ url = {https://ldbcouncil.org/docs/papers/ldbc-acid-tpctc2020.pdf},
  volume = {12752},
  year = {2020}
 }
