--- a/bibs/references.bib
+++ b/bibs/references.bib
@@ -486,3 +486,64 @@
   annote      = "",
   doi         = {10.54285/ldbc.TZJP7279},
 }
+
+@inproceedings{DBLP:conf/sigmod/AnglesBDFHHLLLM21,
+  author    = {Renzo Angles and
+               Angela Bonifati and
+               Stefania Dumbrava and
+               George Fletcher and
+               Keith W. Hare and
+               Jan Hidders and
+               Victor E. Lee and
+               Bei Li and
+               Leonid Libkin and
+               Wim Martens and
+               Filip Murlak and
+               Josh Perryman and
+               Ognjen Savkovic and
+               Michael Schmidt and
+               Juan F. Sequeda and
+               Slawek Staworko and
+               Dominik Tomaszuk},
+  title     = {{PG-Keys}: {K}eys for Property Graphs},
+  booktitle = {{SIGMOD}},
+  pages     = {2423--2436},
+  publisher = {{ACM}},
+  year      = {2021},
+  url       = {https://doi.org/10.1145/3448016.3457561},
+  doi       = {10.1145/3448016.3457561},
+  timestamp = {Mon, 03 Jan 2022 22:24:52 +0100},
+  biburl    = {https://dblp.org/rec/conf/sigmod/AnglesBDFHHLLLM21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2112-06217,
+  author    = {Alin Deutsch and
+               Nadime Francis and
+               Alastair Green and
+               Keith Hare and
+               Bei Li and
+               Leonid Libkin and
+               Tobias Lindaaker and
+               Victor Marsault and
+               Wim Martens and
+               Jan Michels and
+               Filip Murlak and
+               Stefan Plantikow and
+               Petra Selmer and
+               Hannes Voigt and
+               Oskar van Rest and
+               Domagoj Vrgoc and
+               Mingxi Wu and
+               Fred Zemke},
+  title     = {Graph Pattern Matching in {GQL} and {SQL/PGQ}},
+  journal   = {CoRR},
+  volume    = {abs/2112.06217},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2112.06217},
+  eprinttype = {arXiv},
+  eprint    = {2112.06217},
+  timestamp = {Mon, 03 Jan 2022 15:45:35 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2112-06217.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
